# greek-room-api

./: .dockerignore  .env  .env_mcpserver  .gitignore  Dockerfile.fastapi  Dockerfile.mcp  Dockerfile.streamlit  Dockerfile.whatsapp  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/analyze_script_punct/: script_punct.docx  script_punct.txt  script_punct2.docx  script_punct2.txt  script_punct3_arabic.docx  script_punct3_arabic.txt
notebooks/: mcp_client.ipynb  wb_file_prop_test.ipynb
src/: app.py  app_mcp.py  chat.py  generate_token.py  helper.py  markdown_writer.py  streamlit_app.py  test_auth.py  test_mcp.py  test_mcp_client_auth.py  wb_file_props.py  whatsapp_bot.py
